# OpenKP

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  WISHLIST.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  release-checklist.md
docs/adr/: 001-build-fresh-vs-fork-open-record.md  002-python-fastmcp-playwright-stack.md  003-local-first-no-hosted-service.md  004-writes-require-confirm-token.md  005-interactive-first-run-auth.md  006-user-endpoint-piggyback.md  README.md
docs/research/: README.md  how-to-capture-har.md
docs/research/endpoints/: appointments.md  auth.md  billing.md  documents.md  emergency_contacts.md  labs.md  medications.md  messages.md  profile.md  refill.md  upcoming_orders.md
openkp/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
openkp/fake_kp/: __init__.py
openkp/scripts/: recon_appointments.py  recon_problems_allergies.py
openkp/src/openkp/: __init__.py  config.py  mcp_server.py  safety.py
openkp/src/openkp/scrapers/: __init__.py  allergies.py  appointments.py  auth.py  csrf.py  emergency_contacts.py  labs.py  medications.py  messages.py  profile.py  refill.py  request.py  session.py  visit_notes.py
openkp/tests/: test_allergies.py  test_appointments.py  test_config.py  test_csrf.py  test_emergency_contacts.py  test_keepalive.py  test_labs.py  test_medications.py  test_messages.py  test_problems.py  test_profile.py  test_refill.py  test_request.py  test_safety.py  test_session_persistence.py  test_visit_notes.py
scripts/: setup-dev.sh
